<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Activity_contact" >

    <RelativeLayout
        android:id="@+id/rel_top"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/top" >

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:background="@drawable/button_back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <include
        android:id="@+id/includeMenuContact"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/cusmenu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/includeMenuContact"
        android:layout_below="@id/rel_top"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp" >

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:minWidth="70dp"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:minWidth="70dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:minWidth="70dp"
                    android:text="@string/phone"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvSubject"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:minWidth="70dp"
                    android:text="@string/subject"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:minWidth="70dp"
                    android:text="@string/message"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/btSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bt_send"
                android:contentDescription="@string/contact"
                android:padding="1dp"
                android:text="@string/send_mail"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_address"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_phone"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_fax"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_office"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_phone2"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/company_fax2"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>