<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_setting" >

    <RelativeLayout
        android:id="@+id/rel_top"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/top" >

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:background="@drawable/button_back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/relax"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rel_top" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:id="@+id/llMusic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wtop"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/music" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRss"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wmid"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_rss"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/news_feed" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGame"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wbot"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/game" />
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/includeMenu"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        layout="@layout/cusmenu" />

</RelativeLayout>